# Claude-Code-Cloud

./: .env.development  .env.example  .gitignore  .mcp.json  CLAUDE.md  Makefile  QUICKSTART.md  README.md  docker-compose.dev.yml  docker-compose.dind.yml  docker-compose.yml
src/backend/: .dockerignore  .env.example  Dockerfile  FILES.md  IMPLEMENTATION.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_phase2_api.py
src/backend/app/: __init__.py  config.py  main.py
src/backend/app/api/: __init__.py  dependencies.py
src/backend/app/api/middleware/: __init__.py  error_handler.py
src/backend/app/api/routes/: agents.py  auth.py  commands.py  cron.py  files.py  health.py  mcp.py  models.py  project_config.py  projects.py  public_access.py  public_api.py  sessions.py  shares.py  skills.py  templates.py
src/backend/app/api/websocket/: __init__.py  handlers.py  public_handlers.py
src/backend/app/core/: chat_processor.py  config_loader.py  cron_scheduler.py  project_manager.py  session_manager.py
src/backend/app/core/auth/: __init__.py  backend.py  db.py  manager.py  users.py
src/backend/app/core/security/: __init__.py  (+2 more)
src/backend/app/models/: __init__.py  database.py  errors.py  messages.py  project_share.py  projects.py  sessions.py  user.py
src/backend/app/schemas/: __init__.py  project_config.py  public_access.py  request.py  response.py  share.py  template.py  user.py  websocket.py
src/backend/app/services/: __init__.py  chat_service.py  file_service.py  mcp_service.py  permission_service.py  project_config_service.py  public_access_service.py  share_service.py  template_service.py  usage_service.py
src/backend/app/utils/: database.py  dind_executor.py  helpers.py  logger.py  redis_client.py
src/backend/migrations/: 001_initial_schema.sql  002_public_access_tables.sql  add_cost_limit_columns.sql  add_enabled_tools_column.sql  add_sdk_session_id.sql  create_template_tables.sql
src/backend/scripts/: entrypoint.sh
src/backend/tests/: conftest.py
src/backend/tests/integration/: test_health.py
src/backend/tests/unit/: test_config.py
(+302 files in other folders)
