[tool.poetry]
name = "claude-code-backend"
version = "1.0.0"
description = "Claude Code Backend - FastAPI with Agent SDK"
authors = ["Claude Code Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
python-multipart = "^0.0.9"
anthropic = "^0.39.0"
claude-agent-sdk = "^0.1.18"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
aiomysql = "^0.2.0"
alembic = "^1.13.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.0.0"
python-dotenv = "^1.0.1"
structlog = "^24.4.0"
python-json-logger = "^2.0.7"
aiofiles = "^23.2.1"
httpx = "^0.27.2"
tenacity = "^9.0.0"
websockets = "^12.0"
apscheduler = "^3.10.4"
fastapi-users = "^13.0.0"
fastapi-users-db-sqlalchemy = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=app --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long, handled by black
]

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101", "B601"]
